Remove deprated URL constructor